# listas-logica-programacao

./: CMakeLists.txt
lista-1/: Atv1.c  Atv11.c  Atv12.c  Atv13.c  Atv14.c  Atv15.c  Atv16.c  Atv17.c  Atv18.c  Atv19.c  Atv2.c  Atv20.c  Atv3.c  Atv4.c  Atv5.c  Atv6.c  Atv7.c  Atv8.c  Atv9.c  atv10.c  teste-1.c
lista-2/: Atv1.c  Atv2.c  Atv3.c  Atv4.c  Atv5.c  Atv6.c  Atv7.c
lista-3/: At1.2.c  At1.c  At2.c  At3.c  At4.c
lista-4/: At1.4.c  At10.4.c  At2.4.c  At3.4.c  At4.4.c  At5.4.c  At6.4.c  At7.4.c  At8.4.c  At9.4.c
lista-5/: At.1.5.c  At.2.5.c  At.3.5.c  At.7.5.c
