cmake_minimum_required(VERSION 3.28)
project(listas_logica_programacao C)

set(CMAKE_C_STANDARD 23)

add_executable(listas_logica_programacao main.c)

# Nome do executável + espaçco + caminho do arquivo
add_executable(Atv1 lista-1/Atv1.c)

add_executable(Atv2 lista-1/Atv2.c)

add_executable(Atv3 lista-1/Atv3.c)