cmake_minimum_required(VERSION 3.28)
project(listas_logica_programacao C)

set(CMAKE_C_STANDARD 23)

add_executable(listas_logica_programacao main.c)

# Nome do executável + espaçco + caminho do arquivo
add_executable(Atv1 lista-1/Atv1.c
        lista-1/teste-1.c)

add_executable(Atv2 lista-1/Atv2.c)

add_executable(Atv3 lista-1/Atv3.c)

add_executable(Atv4 lista-1/Atv4.c)

add_executable(Atv5 lista-1/Atv5.c)

add_executable(Atv6 lista-1/Atv6.c)

add_executable(Atv7 lista-1/Atv7.c)

add_executable(Atv8 lista-1/Atv8.c)

add_executable(Atv9 lista-1/Atv9.c)

add_executable(atv10 lista-1/atv10.c)

add_executable(Atv11 lista-1/Atv11.c)

add_executable(Atv12 lista-1/Atv12.c)

add_executable(Atv13 lista-1/Atv13.c)

add_executable(Atv14 lista-1/Atv14.c)

add_executable(Atv15 lista-1/Atv15.c)

add_executable(Atv16 lista-1/Atv16.c)

add_executable(Atv17 lista-1/Atv17.c)

add_executable(Atv18 lista-1/Atv18.c)

add_executable(Atv19 lista-1/Atv19.c)

add_executable(Atv20 lista-1/Atv20.c)

add_executable(teste-1 lista-1/teste-1.c)

add_executable(Atv2.1 lista-2/Atv1.c)

add_executable(Atv2.2 lista-2/Atv2.c)

add_executable(Atv3.2 lista-2/Atv3.c)

add_executable(Atv4.2 lista-2/Atv4.c)

add_executable(Atv5.2 lista-2/Atv5.c)

add_executable(Atv6.2 lista-2/Atv6.c)

add_executable(Atv7.2 lista-2/Atv7.c)

add_executable(At1.3 lista-3/At1.c)

add_executable(At1.2.3 lista-3/At1.2.c)

add_executable(At2.3 lista-3/At2.c)

add_executable(At3.3 lista-3/At3.c)

add_executable(At4.3 lista-3/At4.c)

add_executable(At1.4 lista-4/At1.4.c)

add_executable(At2.4 lista-4/At2.4.c)

add_executable(At3.4 lista-4/At3.4.c)

add_executable(At4.4 lista-4/At4.4.c)

add_executable(At5.4 lista-4/At5.4.c)

add_executable(At6.4 lista-4/At6.4.c)

add_executable(At7.4 lista-4/At7.4.c)

add_executable(At8.4 lista-4/At8.4.c)

add_executable(At9.4 lista-4/At9.4.c)

add_executable(At10.4 lista-4/At10.4.c)